--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/dotenv": "^1.3.0",
+    "axios-jsonp": "^1.0.4",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "firebase": "^7.19.1",
+    "google-libphonenumber": "^3.2.14",
+    "libphonenumber-js": "^1.8.4",
+    "nuxt": "^2.14.5",
+    "vee-validate": "^3.4.2",
+    "vue-form-wizard": "^0.8.4",
+    "vue-phone-number-input": "^1.1.10",
+    "vuexfire": "^3.0.1"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/vuetify": "^1.11.2",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
