--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.24.0",
     "google-libphonenumber": "^3.2.14",
     "libphonenumber-js": "^1.8.4",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.5",
     "vee-validate": "^3.4.2",
     "vue-form-wizard": "^0.8.4",
